--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,5 +1,6 @@
-APP_PORT=5000
+APP_PORT=YOUR_PORT
 FRONTEND_URL=http://localhost:3000
+DB_PORT=YOUR_DB_PORT
 DB_HOST=localhost
 DB_USER=notroot
 DB_PASSWORD=helloworld
