--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "react-simply-carousel": "^8.4.2",
+    "template-fullstack": "file:.."
   },
   "rules": {
     "no-console": [
