--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,18 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "axios": "^1.3.0",
+    "cors": "^2.8.5",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-player": "^2.11.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.8.0",
+    "react-simply-carousel": "^8.4.2",
+    "template-fullstack": "file:.."
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
