--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
   "devDependencies": {
     "concurrently": "^7.0.0",
     "husky": "^7.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.0",
+    "nodemon": "^2.0.20",
+    "react-player": "^2.11.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.8.0",
+    "react-simply-carousel": "^8.4.2"
   }
 }
